[wip] enable jigsaw modules